Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140646

Error pops up at the end of playing audio file (mp4a with ALAC codec) recorded with audio recorder example

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.8.6, 6.10.1, 6.11.0 FF
    • 6.10.0 RC
    • Multimedia
    • None
    • macOS
    • 9db80c7b8 (dev), 4b3211fe3 (6.10), 681e8f65a (tqtc/lts-6.8)
    • Multimedia Current w28 ...

      Environment:

      MacOS 15.6.1

      Qt Creator 18.0.0 

      Qt 6.10 RC

       

      Steps to reproduce:

      1. Run audio recorder example and record a sample with MPEG-4 cotnainer and ALAC codec.
      2. Run QML media player app. 
      3. Play recorded file or attached alac2.mp4a

      Expected: The file is played without any errors. 

      Actual: The file is being played correctly but at the end of the file, the app throws an error. Maybe it’s worth looking into what the problem actually is.

      [alac @ 0x7f8b2e86c680] invalid samples per frame: 0

      Reproducibility:  100% 

        1. alac2.mp4a
          99 kB
          Łukasz Kosiorowski
        2. Screenshot 2025-09-26 at 18.30.27.png
          47 kB
          Łukasz Kosiorowski
        3. Screenshot 2025-09-26 at 18.33.36.png
          47 kB
          Łukasz Kosiorowski
        For Gerrit Dashboard: QTBUG-140646
        # Subject Branch Project Status CR V

            timblechmann tim blechmann
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change