FFmpeg: muxer - write null frame on cleanup

Writing a null frame will silence the flush the queues and ensures that
all data is properly written.

Fixes: QTBUG-140646
Pick-to: 6.8
Change-Id: Iafb7fb75f15cb9f6f0954561283adb36f6bab109
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 9db80c7b8cbbaa5ab0396fd5ccdb55eea6a181c1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>